--- a/flexboxedit.html
+++ b/flexboxedit.html
@@ -108,11 +108,11 @@
 <div class="controls" data-toolbar-edit-layout style="width: 100%; overflow-x: auto;">
   <div style="display: flex; flex-direction: column;">
     <button style="flex: 1; width: 200px;" id="addItem">Add Item into Selected Flexbox</button>
-    <button style="flex: 1; width: 200px;" id="addItemBeforeSibling">Add Item before Selected Flexbox</button>
-    <button style="flex: 1; width: 200px;" id="addItemAfterSibling">Add Item after Selected Flexbox</button>
-    <button style="flex: 1; width: 200px;" id="moveItemToInside">Move to inside...</button>
-    <button style="flex: 1; width: 200px;" id="moveItemToBefore">Move to before...</button>
-    <button style="flex: 1; width: 200px;" id="moveItemToAfter">Move to after...</button>
+    <button disabled style="flex: 1; width: 200px;" id="addItemBeforeSibling">(WIP) Add Item before Selected Flexbox</button>
+    <button disabled style="flex: 1; width: 200px;" id="addItemAfterSibling">(WIP) Add Item after Selected Flexbox</button>
+    <button disabled style="flex: 1; width: 200px;" id="moveItemToInside">(WIP) Move to inside...</button>
+    <button disabled style="flex: 1; width: 200px;" id="moveItemToBefore">(WIP) Move to before...</button>
+    <button disabled style="flex: 1; width: 200px;" id="moveItemToAfter">(WIP) Move to after...</button>
   </div>
   <button id="removeItem">Remove Selected Item</button>
   <label>
