support shift up, down, cut, paste, add to sibling before / after

--- a/public/index.html
+++ b/public/index.html
@@ -2,3 +2,7 @@
     <p><a href="/api-docs">API Documentation</a></p>
     <p><a href="/swagger.json">API Documentation (JSON)</a></p>
 </div>
+
+<div>
+    <p><a href="/flexboxedit.html">Flexbox edit</a></p>
+</div>
