--- a/public/flexboxedit.html
+++ b/public/flexboxedit.html
@@ -28,11 +28,15 @@
 <div class="controls" data-toolbar-edit-layout style="width: 100%; overflow-x: auto;">
   <div style="display: flex; flex-direction: column;">
     <button style="flex: 1; width: 200px;" id="addItem">Add Item into Selected Flexbox</button>
-    <button disabled style="flex: 1; width: 200px;" id="addItemBeforeSibling">(WIP) Add Item before Selected Flexbox</button>
-    <button disabled style="flex: 1; width: 200px;" id="addItemAfterSibling">(WIP) Add Item after Selected Flexbox</button>
-    <button disabled style="flex: 1; width: 200px;" id="moveItemToInside">(WIP) Move to inside...</button>
-    <button disabled style="flex: 1; width: 200px;" id="moveItemToBefore">(WIP) Move to before...</button>
-    <button disabled style="flex: 1; width: 200px;" id="moveItemToAfter">(WIP) Move to after...</button>
+    <button style="flex: 1; width: 200px;" id="addItemBeforeSibling">Add Item before Selected Flexbox</button>
+    <button style="flex: 1; width: 200px;" id="addItemAfterSibling">Add Item after Selected Flexbox</button>
+    <div style="display: flex; flex-direction: row; width: 200px; flex: 1;">
+      <button style="flex: 1;" id="moveItemCut">Cut</button>
+      <button disabled style="flex: 1;" id="moveItemCopy">(WIP) Copy</button>
+      <button style="flex: 1;" id="moveItemPaste">Paste</button>
+    </div>
+    <button style="flex: 1; width: 200px;" id="moveItemToBefore">Shift Uup...</button>
+    <button style="flex: 1; width: 200px;" id="moveItemToAfter">Shift down...</button>
   </div>
   <button id="removeItem">Remove Selected Item</button>
   <label>
