support copy and paste

--- a/public/flexboxedit.html
+++ b/public/flexboxedit.html
@@ -54,7 +54,7 @@
     <button style="flex: 1; width: 200px;" id="addItemAfterSibling">Add Item after Selected Flexbox</button>
     <div style="display: flex; flex-direction: row; width: 200px; flex: 1;">
       <button style="flex: 1;" id="moveItemCut">Cut</button>
-      <button disabled style="flex: 1;" id="moveItemCopy">(WIP) Copy</button>
+      <button style="flex: 1;" id="moveItemCopy">Copy</button>
       <button style="flex: 1;" id="moveItemPaste">Paste</button>
     </div>
     <button style="flex: 1; width: 200px;" id="moveItemToBefore">Shift Up...</button>
