--- a/public/flexboxedit.html
+++ b/public/flexboxedit.html
@@ -7,6 +7,7 @@
 
     <link href="./flexboxedit.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simply-beautiful@latest/dist/index.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-lite.min.js"></script>
 </head>
@@ -277,7 +278,7 @@
     </label>
   </span>
 
-  <div style="display: flex; ">
+  <div style="display: flex; flex-direction: column; gap: 10px; ">
     <div style="display: flex; flex-direction: column; ">
       <div style="display: flex; flex-direction: row; ">
         <label>Source JSON</label>
@@ -288,11 +289,14 @@
           </div>
         </div>
       </div>
-      <textarea data-dbg style="width: 250px; flex: 1; "></textarea>
+      <textarea data-dbg style="width: 250px; flex: 1; display: none;"></textarea>
     </div>
     <div style="display: flex; flex-direction: column; ">
-      <label>Export HTML</label>
-      <textarea data-result style="width: 250px; flex: 1; "></textarea>
+      <div style="display: flex; flex-direction: row; flex: 1; align-items: stretch;">
+        <label>Export HTML</label>
+        <button data-btn-dbg-copy-html>Copy HTML</button>
+      </div>
+      <textarea data-result style="width: 250px; flex: 1; display: none;"></textarea>
     </div>
   </div>
 
@@ -330,11 +334,14 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
 
 
 <script src="./flexboxedit.js"></script>
+<script src="./flexboxedit.rendercore.js"></script>
+<script src="./flexboxedit.summernote.js"></script>
 <script src="./flexboxedit.loadsave.js"></script>
-
 
 <script>
   (async () => {
+    const flexboxInstance = await FlexboxEdit.initialize();
+    await flexboxInstance.createNewItem();
 
     const doSave = async ({
       id,
@@ -369,7 +376,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
 
       const reslist = await FlexboxEdit.LoadSave.applyLoadList();
 
-      FlexboxEdit.domExplorerItemlist.innerHTML = "";
+      flexboxInstance.domExplorerItemlist.innerHTML = "";
 
       for (var k in reslist.data) {
         const item = reslist.data[k];
@@ -393,7 +400,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
         dom.domName = dom.querySelector('[data-explorer-item-name]');
         dom.item = item;
 
-        FlexboxEdit.domExplorerItemlist.append(dom);
+        flexboxInstance.domExplorerItemlist.append(dom);
       }
 
     }
@@ -403,7 +410,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
 
       await FlexboxEdit.LoadSave.applyRemove();
 
-      FlexboxEdit.domExplorerItemlist.querySelectorAll(`[data-explorer-item-id="${res.data.id}"]`).forEach((dom) => {
+      flexboxInstance.domExplorerItemlist.querySelectorAll(`[data-explorer-item-id="${res.data.id}"]`).forEach((dom) => {
         dom.remove();
       });
 
@@ -411,7 +418,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
 
 
 
-    FlexboxEdit.setOnUpdateItem( async ({ isUpdate, id, name, json, }) => {
+    flexboxInstance.setOnUpdateItem( async ({ isUpdate, id, name, json, }) => {
       if (isUpdate) {
         await doSave({id, name, json, });
       }
@@ -419,7 +426,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
 
 
 
-    FlexboxEdit.setOnUpdateItemMeta( async ({ isUpdate, id, name, json, }) => {
+    flexboxInstance.setOnUpdateItemMeta( async ({ isUpdate, id, name, json, }) => {
       if (isUpdate) {
         await doSave({id, name, json, });
       }
@@ -427,7 +434,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
 
 
 
-    FlexboxEdit.domExplorerItemlist.addEventListener('click', async (e) => {
+    flexboxInstance.domExplorerItemlist.addEventListener('click', async (e) => {
       e.preventDefault();
 
       const domItemRemove = e.target.closest(`[data-explorer-item-remove]`);
@@ -441,7 +448,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
       } else if (domItem) {
 
         const res = await FlexboxEdit.LoadSave.applyLoad(domItem.item.id);
-        await FlexboxEdit.loadItem({
+        await flexboxInstance.loadItem({
           id: res.data.id,
           name: res.data.name,
           json: res.data.json ? JSON.parse(res.data.json) : undefined,
