refactor: flexbox summernote library to isolate from main

--- a/public/flexboxedit.html
+++ b/public/flexboxedit.html
@@ -385,7 +385,7 @@ background: rgba(0,0,0,0.5); padding: 10px; box-sizing: border-box;">
 <script src="./flexboxedit.templateeditorpanelflexbox.js"></script>
 <script src="./flexboxedit.templateeditorpanelattr.js"></script>
 <script src="./flexboxedit.rendercore.js"></script>
-<script src="./flexboxedit.summernote.js"></script>
+<script src="./flexboxedit.htmleditor.summernote.js"></script>
 <script src="./flexboxedit.loadsave.js"></script>
 
 <script>
