--- a/public/index.html
+++ b/public/index.html
@@ -5,4 +5,5 @@
 
 <div>
     <p><a href="/flexboxedit.html">Flexbox edit</a></p>
+    <p><a href="/flexboxedit.client-test.html">Flexbox edit client test</a></p>
 </div>
